fix scrollbar

--- a/app/styles/tailwind.css
+++ b/app/styles/tailwind.css
@@ -78,3 +78,10 @@
   box-shadow:
     var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
+
+@layer base {
+  * {
+    scrollbar-width: thin;
+    scrollbar-color: #a2a2ad transparent;
+  }
+}
